Move off of uv, just use pip, more reliable on colab

--- a/tutorials/feature-engineering/feature-engineering-101.ipynb
+++ b/tutorials/feature-engineering/feature-engineering-101.ipynb
@@ -24,41 +24,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[2mUsing Python 3.12.12 environment at: /Users/dantasse/src/vectordb-recipes/venv\u001b[0m\n",
-      "\u001b[2K\u001b[37m⠙\u001b[0m \u001b[2mimportlib-metadata==8.7.1                                                     \u001b[0m\u001b[2mResolved \u001b[1m117 packages\u001b[0m \u001b[2min 173ms\u001b[0m\u001b[0m\n",
-      "\u001b[2K\u001b[2mPrepared \u001b[1m1 package\u001b[0m \u001b[2min 0.20ms\u001b[0m\u001b[0m                                             \n",
-      "\u001b[2mUninstalled \u001b[1m1 package\u001b[0m \u001b[2min 3ms\u001b[0m\u001b[0m\n",
-      "\u001b[2K\u001b[2mInstalled \u001b[1m1 package\u001b[0m \u001b[2min 1ms\u001b[0m\u001b[0m                                  \u001b[0m\n",
-      " \u001b[31m-\u001b[39m \u001b[1mprotobuf\u001b[0m\u001b[2m==5.29.5\u001b[0m\n",
-      " \u001b[32m+\u001b[39m \u001b[1mprotobuf\u001b[0m\u001b[2m==6.33.2\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!uv pip install --upgrade geneva lancedb kubernetes \"ray[default]\" rerankers pandas torch torchvision open-clip-torch transformers\n",
-    "# Pin transformers to a compatible version for BLIP models (needs >=4.40.0 for Unpack import)\n",
-    "# If you encounter \"ImportError: cannot import name 'Unpack'\", ensure transformers>=4.40.0\n",
-    "# !uv pip install \"transformers>=4.40.0,<5.0.0\"\n",
-    "try:\n",
-    "  import open_clip\n",
-    "  from transformers import BlipProcessor, BlipForConditionalGeneration\n",
-    "except ImportError:\n",
-    "  !uv pip uninstall open-clip-torch transformers -y\n",
-    "  !uv pip install open-clip-torch transformers\n",
-    "  import open_clip\n",
-    "  from transformers import BlipProcessor, BlipForConditionalGeneration\n",
+    "!pip install geneva lancedb kubernetes \"ray[default]\" rerankers pandas torch torchvision open-clip-torch transformers\n",
     "\n",
-    "# Pin protobuf to avoid MessageFactory.GetPrototype AttributeError (removed in protobuf 6.30.0+)\n",
-    "# !uv pip install \"protobuf<6.30.0\"\n",
-    "# working around a quirk on Colab:\n",
-    "# !uv pip install --force-reinstall numpy scipy"
+    "# Pin protobuf to avoid MessageFactory.GetPrototype AttributeError warnings (removed in protobuf 6.30.0+)\n",
+    "!pip install \"protobuf<6.30.0\""
    ]
   },
   {
