remove uv from mat views too

--- a/tutorials/feature-engineering/materialized-views.ipynb
+++ b/tutorials/feature-engineering/materialized-views.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!uv pip install --upgrade geneva pandas \"ray[default]\" kubernetes"
+    "!pip install --upgrade geneva pandas \"ray[default]\" kubernetes"
    ]
   },
   {
