More feature engineering 101 (#349)

--- a/tutorials/feature-engineering/feature-engineering-101.ipynb
+++ b/tutorials/feature-engineering/feature-engineering-101.ipynb
@@ -12,7 +12,14 @@
     "1. **Data Ingestion**: Downloading a fashion dataset and loading it into a LanceDB table.\n",
     "2. **Declarative Feature Engineering**: Using Geneva to define and compute features on-the-fly.\n",
     "3. **Embedding Generation**: Creating vector embeddings for both images and text to enable semantic search.\n",
-    "4. **Updating**: Adding more raw data to our table and rerunning our backfills on only the new data"
+    "4. **Updating**: Adding more raw data to our table and rerunning our backfills on only the new data.\n",
+    "\n",
+    "## Note about Colab\n",
+    "\n",
+    "This notebook runs on Google Colab, even the free tier, but it will be slow, because it has to start a local Ray cluster and execute multiple ML models on its workers. We recommend downloading this notebook and running it locally. But if you do run on Colab, we recommend:\n",
+    "- using a GPU instance (Runtime -> Change runtime type)\n",
+    "- running on only 100 rows\n",
+    "- not drawing conclusions about speed from this notebook. This notebook is meant as a demo of the basic workflow of feature engineering with LanceDB, not a benchmark or speed demo."
    ]
   },
   {
@@ -21,9 +28,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!uv pip install --upgrade geneva lancedb kubernetes \"ray[default]\" rerankers pandas transformers torch torchvision open-clip-torch pillow\n",
-    "# working around a quirk on Colab:\n",
-    "!uv pip install --force-reinstall numpy scipy"
+    "!pip install geneva lancedb kubernetes \"ray[default]\" rerankers pandas torch torchvision open-clip-torch transformers\n",
+    "\n",
+    "# Pin protobuf to avoid MessageFactory.GetPrototype AttributeError warnings (removed in protobuf 6.30.0+)\n",
+    "!pip install \"protobuf<6.30.0\""
    ]
   },
   {
@@ -69,14 +77,11 @@
    },
    "outputs": [],
    "source": [
-    "## Update this based on your env\n",
-    "\n",
-    "# Start with 100-1000 images for testing. With only a few images, you might not get great query\n",
-    "# results, but it will run faster. Try up to 44200 for the full dataset.\n",
-    "DATASET_SIZE = 1000 \n",
-    "# Increase this if you have more CPUs available and want it to run faster.\n",
+    "# Especially if on Colab, start with just 100 rows for testing.\n",
+    "DATASET_SIZE = 100\n",
+    "# Increase this if you're running locally, you have more CPUs available and want it to run faster.\n",
     "CONCURRENCY = 4\n",
-    "CHECKPOINT_SIZE = 300"
+    "CHECKPOINT_SIZE = min(300, DATASET_SIZE / 2)"
    ]
   },
   {
@@ -104,8 +109,7 @@
     "IMG_DIR = Path(\"fashion-dataset/images\")\n",
     "STYLE_CSV = Path(\"fashion-dataset/styles.csv\")\n",
     "DB_PATH = \"./db\"\n",
-    "TABLE_NAME = \"products\"\n",
-    "INSERT_FRAG_SIZE = min(1000, DATASET_SIZE / 10)"
+    "TABLE_NAME = \"products\"\n"
    ]
   },
   {
@@ -123,6 +127,9 @@
    },
    "outputs": [],
    "source": [
+    "# STYLE_CSV has info about the clothes: IDs, descriptions, and image paths\n",
+    "# Images themselves are stored in IMG_DIR; generate_rows will combine them with the metadata\n",
+    "# in STYLE_CSV and load them all in to our LanceDB table.\n",
     "df = pd.read_csv(STYLE_CSV, on_bad_lines='skip')\n",
     "df = df.dropna(subset=[\"id\", \"productDisplayName\"])\n",
     "df = df.drop_duplicates(subset=[\"id\"], keep=\"first\")\n",
@@ -139,8 +146,8 @@
     "                \"image_bytes\": f.read()\n",
     "            }\n",
     "\n",
-    "db = lancedb.connect(DB_PATH)\n",
     "\n",
+    "db = lancedb.connect(DB_PATH)\n",
     "# Drop the table if it already exists so we can recreate it\n",
     "try:\n",
     "    table = db.drop_table(TABLE_NAME)\n",
@@ -150,13 +157,16 @@
     "data_stream = generate_rows(df, IMG_DIR)\n",
     "table = None\n",
     "\n",
+    "# Create the table and load rows in in batches\n",
     "rows = []\n",
     "for row in data_stream:\n",
     "    rows.append(row)\n",
-    "    if len(rows) == INSERT_FRAG_SIZE:\n",
+    "    if len(rows) == min(1000, DATASET_SIZE / 2):\n",
     "        if table:\n",
     "            table.add(rows)\n",
     "        else:\n",
+    "            # You have to provide schema or some data to create the table. Here we create the \n",
+    "            # table with the first batch of data for simplicity.\n",
     "            table = db.create_table(TABLE_NAME, data=rows)\n",
     "        rows = []\n",
     "if rows:\n",
@@ -409,9 +419,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Adding and Backfilling Embedding Columns\n",
+    "### Adding and Backfilling Embedding and Caption Columns\n",
     "\n",
-    "Now, let's add our new embedding generators as virtual columns and then backfill them."
+    "Now, let's add our new generators as virtual columns and then backfill them."
    ]
   },
   {
@@ -552,7 +562,7 @@
     "\n",
     "Let's add some new clothes to our table and rerun the backfills to add all our derived features. This will only recompute our backfills on the new rows. This doesn't save that much time in this tutorial, but it absolutely does in production. Imagine adding new data daily; you won't want to recompute your costly features on all your data every day!\n",
     "\n",
-    "As we do the following backfills, you will notice this as the progress bars start at \"1000/1500\", reflecting that the original 1000 rows have already been computed."
+    "We'll add another batch of data that's half as big as the first. Then, as we do the following backfills, you will notice this as the progress bars only process the new data. For example, if our dataset was originally 100 rows, and we add 50 more, progress bars will show \"100/150\", reflecting that the original 100 rows have already been computed."
    ]
   },
   {
@@ -561,7 +571,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_rows = list(generate_rows(df, IMG_DIR, start=DATASET_SIZE, end=DATASET_SIZE+500))\n",
+    "new_rows = list(generate_rows(df, IMG_DIR, start=DATASET_SIZE, end=DATASET_SIZE * 1.5))\n",
     "table.add(new_rows)\n",
     "table.backfill(\"color_tags\", checkpoint_size=CHECKPOINT_SIZE, concurrency=CONCURRENCY)\n",
     "table.backfill(\"image_embedding\", checkpoint_size=CHECKPOINT_SIZE, concurrency=CONCURRENCY)\n",
