Feature eng 101 bugfix

--- a/tutorials/feature-engineering/feature-engineering-101.ipynb
+++ b/tutorials/feature-engineering/feature-engineering-101.ipynb
@@ -571,7 +571,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_rows = list(generate_rows(df, IMG_DIR, start=DATASET_SIZE, end=DATASET_SIZE * 1.5))\n",
+    "new_rows = list(generate_rows(df, IMG_DIR, start=DATASET_SIZE, end=int(DATASET_SIZE * 1.5)))\n",
     "table.add(new_rows)\n",
     "table.backfill(\"color_tags\", checkpoint_size=CHECKPOINT_SIZE, concurrency=CONCURRENCY)\n",
     "table.backfill(\"image_embedding\", checkpoint_size=CHECKPOINT_SIZE, concurrency=CONCURRENCY)\n",
