--- a/tutorials/feature-engineering/feature-engineering-101.ipynb
+++ b/tutorials/feature-engineering/feature-engineering-101.ipynb
@@ -77,7 +77,7 @@
    },
    "outputs": [],
    "source": [
-    "# Especially if on Colab, start with just 100 rows for speed.\n",
+    "# Especially if on Colab, start with just 100 rows for testing.\n",
     "DATASET_SIZE = 100\n",
     "# Increase this if you're running locally, you have more CPUs available and want it to run faster.\n",
     "CONCURRENCY = 4\n",
