--- a/tutorials/feature-engineering/feature-engineering-101.ipynb
+++ b/tutorials/feature-engineering/feature-engineering-101.ipynb
@@ -571,7 +571,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_rows = list(generate_rows(df, IMG_DIR, start=DATASET_SIZE, end=DATASET_SIZE * 1.5))\n",
+    "new_rows = list(generate_rows(df, IMG_DIR, start=DATASET_SIZE, end=int(DATASET_SIZE * 1.5)))\n",
     "table.add(new_rows)\n",
     "table.backfill(\"color_tags\", checkpoint_size=CHECKPOINT_SIZE, concurrency=CONCURRENCY)\n",
     "table.backfill(\"image_embedding\", checkpoint_size=CHECKPOINT_SIZE, concurrency=CONCURRENCY)\n",
@@ -594,28 +594,7 @@
    "source": [
     "## 5. Wrapping up\n",
     "\n",
-    "That's the basics of feature engineering! If you wanted to go on to query this table, you might build indexes, as in the next cell:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# Full-Text Search (FTS) Index: This will allow us to quickly search for keywords in our `caption` column.\n",
-    "table.create_fts_index(\"caption\")\n",
-    "# Vector Index: This will allow us to perform fast similarity searches on our `image_embedding` column.\n",
-    "table.create_index(vector_column_name=\"image_embedding\", num_sub_vectors=128)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "And if you want to expand this to run on a Ray cluster, to scale up to production use, see [Execution Contexts](https://docs.lancedb.com/geneva/jobs/contexts) for more info on how to do so."
+    "That's the basics of feature engineering! Next, check out our other [feature engineering tutorials](https://docs.lancedb.com/tutorials/feature-engineering), or if you're ready to start building features in production, read about [Execution Contexts](https://docs.lancedb.com/geneva/jobs/contexts)."
    ]
   }
  ],
