Update tutorial to use db.local_ray_context()

--- a/tutorials/feature-engineering/feature-engineering-101.ipynb
+++ b/tutorials/feature-engineering/feature-engineering-101.ipynb
@@ -28,7 +28,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install geneva lancedb kubernetes \"ray[default]\" rerankers pandas torch torchvision open-clip-torch transformers\n",
+    "!pip install --upgrade geneva lancedb pylance\n",
+    "!pip install kubernetes \"ray[default]\" rerankers pandas torch torchvision open-clip-torch transformers\n",
     "\n",
     "# Pin protobuf to avoid MessageFactory.GetPrototype AttributeError warnings (removed in protobuf 6.30.0+)\n",
     "!pip install \"protobuf<6.30.0\""
@@ -242,6 +243,9 @@
    },
    "outputs": [],
    "source": [
+    "if \"color_tags\" in table.schema.names:\n",
+    "    table.drop_columns([\"color_tags\"])\n",
+    "    \n",
     "table.add_columns({\n",
     "    \"color_tags\": color_tags,\n",
     "})"
@@ -294,7 +298,8 @@
    },
    "outputs": [],
    "source": [
-    "table.backfill(\"color_tags\", checkpoint_size=CHECKPOINT_SIZE, concurrency=CONCURRENCY)"
+    "with db.local_ray_context():\n",
+    "    table.backfill(\"color_tags\", checkpoint_size=CHECKPOINT_SIZE, concurrency=CONCURRENCY)"
    ]
   },
   {
@@ -312,7 +317,7 @@
    },
    "outputs": [],
    "source": [
-    "table.search().limit(2).to_pandas()"
+    "table.search().limit(5).to_pandas()"
    ]
   },
   {
@@ -461,7 +466,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "table.backfill(\"image_embedding\", checkpoint_size=CHECKPOINT_SIZE, concurrency=CONCURRENCY)"
+    "with db.local_ray_context():\n",
+    "    table.backfill(\"image_embedding\", checkpoint_size=CHECKPOINT_SIZE, concurrency=CONCURRENCY)"
    ]
   },
   {
@@ -473,7 +479,8 @@
    "outputs": [],
    "source": [
     "# This may take a few minutes if you're running on a CPU.\n",
-    "table.backfill(\"caption\", checkpoint_size=CHECKPOINT_SIZE, concurrency=CONCURRENCY)"
+    "with db.local_ray_context():\n",
+    "    table.backfill(\"caption\", checkpoint_size=CHECKPOINT_SIZE, concurrency=CONCURRENCY)"
    ]
   },
   {
@@ -484,7 +491,7 @@
    },
    "outputs": [],
    "source": [
-    "table.search().limit(2).to_pandas().iloc[0:3]"
+    "table.search().limit(5).to_pandas()"
    ]
   },
   {
@@ -542,7 +549,8 @@
     "table.add_columns({\n",
     "    \"caption_embedding\": GenTextEmbeddings(),\n",
     "})\n",
-    "table.backfill(\"caption_embedding\", checkpoint_size=CHECKPOINT_SIZE, concurrency=CONCURRENCY)"
+    "with db.local_ray_context():\n",
+    "    table.backfill(\"caption_embedding\", checkpoint_size=CHECKPOINT_SIZE, concurrency=CONCURRENCY)"
    ]
   },
   {
@@ -551,7 +559,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "table.search().limit(1).to_pandas().iloc[0:3]"
+    "table.search().limit(5).to_pandas()"
    ]
   },
   {
@@ -573,10 +581,11 @@
    "source": [
     "new_rows = list(generate_rows(df, IMG_DIR, start=DATASET_SIZE, end=int(DATASET_SIZE * 1.5)))\n",
     "table.add(new_rows)\n",
-    "table.backfill(\"color_tags\", checkpoint_size=CHECKPOINT_SIZE, concurrency=CONCURRENCY)\n",
-    "table.backfill(\"image_embedding\", checkpoint_size=CHECKPOINT_SIZE, concurrency=CONCURRENCY)\n",
-    "table.backfill(\"caption\", checkpoint_size=CHECKPOINT_SIZE, concurrency=CONCURRENCY)\n",
-    "table.backfill(\"caption_embedding\", checkpoint_size=CHECKPOINT_SIZE, concurrency=CONCURRENCY)"
+    "with db.local_ray_context():\n",
+    "    table.backfill(\"color_tags\", checkpoint_size=CHECKPOINT_SIZE, concurrency=CONCURRENCY)\n",
+    "    table.backfill(\"image_embedding\", checkpoint_size=CHECKPOINT_SIZE, concurrency=CONCURRENCY)\n",
+    "    table.backfill(\"caption\", checkpoint_size=CHECKPOINT_SIZE, concurrency=CONCURRENCY)\n",
+    "    table.backfill(\"caption_embedding\", checkpoint_size=CHECKPOINT_SIZE, concurrency=CONCURRENCY)"
    ]
   },
   {
