Update this one too

--- a/tutorials/feature-engineering/feature-engineering-101.ipynb
+++ b/tutorials/feature-engineering/feature-engineering-101.ipynb
@@ -277,16 +277,14 @@
     "\n",
     "Triggering backfill creates a distributed job to run the UDF and populate the column values in your LanceDB table. The Geneva framework simplifies several aspects of distributed execution.\n",
     "\n",
-    "Environment management: Geneva automatically packages and deploys your Python execution environment to worker nodes. This ensures that distributed execution occurs in the same environment and depedencies as your prototype.\n",
-    "\n",
     "Checkpoints: Each batch of UDF execution is checkpointed so that partial results are not lost in case of job failures. Jobs can resume and avoid most of the expense of having to recalculate values.\n",
     "\n",
-    "`backfill()` accepts various params to customise scale of your workload, here we'll use:\n",
+    "`backfill()` accepts various params to customize scale of your workload, here we'll use:\n",
     "\n",
     "* `checkpoint_size` - the number of rows that are processed before writing a checkpoint\n",
     "* `concurrency` - how many nodes are used for parallelization\n",
     "\n",
-    "Here, we're using geneva locally, so we won't set up a Ray cluster, but you can also use the same setup and run distributed jobs remotely on Ray clusters."
+    "Here, we'll use `db.local_ray_context()` to run on a local Ray instance, so we don't need to set up a Ray cluster, but you can also use the same setup and run distributed jobs remotely on Ray clusters."
    ]
   },
   {
