--- a/tutorials/feature-engineering/materialized-views.ipynb
+++ b/tutorials/feature-engineering/materialized-views.ipynb
@@ -184,8 +184,16 @@
     "except ValueError as e:\n",
     "    pass\n",
     "shirts = table.search().where(\"articleType = 'Shirts'\").create_materialized_view(db, \"shirts\")\n",
-    "shirts.refresh()\n",
+    "with db.local_ray_context():\n",
+    "    shirts.refresh()\n",
     "shirts.to_pandas()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Like in the 101 demo, we are using `db.local_ray_context()` to say \"run on a Ray instance on this computer.\" It will be much slower than running on multiple remote machines, but will simplify setup for this tutorial."
    ]
   },
   {
@@ -222,7 +230,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shirts.refresh()\n",
+    "with db.local_ray_context():\n",
+    "    shirts.refresh()\n",
     "shirts.to_pandas()"
    ]
   },
@@ -255,7 +264,8 @@
     "             \"image\": \"image_bytes\",\n",
     "             \"isBlue\": \"color == 'Blue'\"})\\\n",
     "    .create_materialized_view(db, \"jeans\")\n",
-    "jeans.refresh()\n",
+    "with db.local_ray_context():\n",
+    "    jeans.refresh()\n",
     "jeans.to_pandas()"
    ]
   },
