Check for typos

--- a/tutorials/feature-engineering/materialized-views.ipynb
+++ b/tutorials/feature-engineering/materialized-views.ipynb
@@ -241,7 +241,7 @@
    "source": [
     "### Custom columns\n",
     "\n",
-    "You can customize your materialized views by renaming columns and using sql expressions ([Datafusion dialect](https://datafusion.apache.org/user-guide/sql/index.html)) to create new columns. Say we want to find all Jeans, but our department uses \"clothingType\" instead of \"articleType\", and we want a simple flag to separate out blue jeans vs other jeans:"
+    "You can customize your materialized views by renaming columns and using sql expressions ([DataFusion dialect](https://datafusion.apache.org/user-guide/sql/index.html)) to create new columns. Say we want to find all Jeans, but our department uses \"clothingType\" instead of \"articleType\", and we want a simple flag to separate out blue jeans vs other jeans:"
    ]
   },
   {
