Update tutorials to use local_ray_context (#352)

--- a/tutorials/feature-engineering/feature-engineering-101.ipynb
+++ b/tutorials/feature-engineering/feature-engineering-101.ipynb
@@ -28,10 +28,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install geneva lancedb kubernetes \"ray[default]\" rerankers pandas torch torchvision open-clip-torch transformers\n",
+    "!pip install --upgrade geneva lancedb pylance\n",
+    "!pip install kubernetes \"ray[default]\" rerankers pandas torch torchvision open-clip-torch transformers\n",
     "\n",
     "# Pin protobuf to avoid MessageFactory.GetPrototype AttributeError warnings (removed in protobuf 6.30.0+)\n",
     "!pip install \"protobuf<6.30.0\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import geneva\n",
+    "print(f\"This tutorial requires Geneva 0.10.0 or later. Current Geneva version: {geneva.__version__}\")"
    ]
   },
   {
@@ -116,7 +127,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, let's load the data into a LanceDB table. We'll read the CSV file with the product metadata, and for each product, we'll also load the corresponding image from the `images` directory. We'll then create a LanceDB table and add the data to it in batches. LanceDB can store objects(images in this case) along with vector embeddings and metadata."
+    "Now, let's load the data into a LanceDB table. We'll read the CSV file with the product metadata, and for each product, we'll also load the corresponding image from the `images` directory. We'll then create a LanceDB table and add the data to it in batches. LanceDB can store objects (images in this case) along with vector embeddings and metadata."
    ]
   },
   {
@@ -183,7 +194,7 @@
     "\n",
     "Now that we have our data in a LanceDB table, we can start engineering features. We'll use Geneva to create new features for our products. \n",
     "\n",
-    "### Defining geneva UDF\n",
+    "### Defining Geneva UDFs\n",
     "\n",
     "Geneva uses Python User Defined Functions (UDFs) to define features as columns in a Lance dataset. Adding a feature is straightforward:\n",
     "\n",
@@ -242,6 +253,9 @@
    },
    "outputs": [],
    "source": [
+    "if \"color_tags\" in table.schema.names:\n",
+    "    table.drop_columns([\"color_tags\"])\n",
+    "    \n",
     "table.add_columns({\n",
     "    \"color_tags\": color_tags,\n",
     "})"
@@ -273,16 +287,14 @@
     "\n",
     "Triggering backfill creates a distributed job to run the UDF and populate the column values in your LanceDB table. The Geneva framework simplifies several aspects of distributed execution.\n",
     "\n",
-    "Environment management: Geneva automatically packages and deploys your Python execution environment to worker nodes. This ensures that distributed execution occurs in the same environment and depedencies as your prototype.\n",
-    "\n",
     "Checkpoints: Each batch of UDF execution is checkpointed so that partial results are not lost in case of job failures. Jobs can resume and avoid most of the expense of having to recalculate values.\n",
     "\n",
-    "`backfill()` accepts various params to customise scale of your workload, here we'll use:\n",
+    "`backfill()` accepts various params to customize scale of your workload, here we'll use:\n",
     "\n",
     "* `checkpoint_size` - the number of rows that are processed before writing a checkpoint\n",
     "* `concurrency` - how many nodes are used for parallelization\n",
     "\n",
-    "Here, we're using geneva locally, so we won't set up a Ray cluster, but you can also use the same setup and run distributed jobs remotely on Ray clusters."
+    "Here, we'll use `db.local_ray_context()` to run on a local Ray instance, so we don't need to set up a Ray cluster, but you can also use the same setup and run distributed jobs remotely on Ray clusters."
    ]
   },
   {
@@ -294,7 +306,8 @@
    },
    "outputs": [],
    "source": [
-    "table.backfill(\"color_tags\", checkpoint_size=CHECKPOINT_SIZE, concurrency=CONCURRENCY)"
+    "with db.local_ray_context():\n",
+    "    table.backfill(\"color_tags\", checkpoint_size=CHECKPOINT_SIZE, concurrency=CONCURRENCY)"
    ]
   },
   {
@@ -312,7 +325,7 @@
    },
    "outputs": [],
    "source": [
-    "table.search().limit(2).to_pandas()"
+    "table.search().limit(5).to_pandas()"
    ]
   },
   {
@@ -321,11 +334,15 @@
    "source": [
     "## 3. Embedding Generation\n",
     "\n",
-    "Now that we have our text-based features, let's create some vector embeddings. Embeddings are numerical representations of data that capture its semantic meaning. We'll create embeddings for our product images and for our new `summary` and `occasion` features.\n",
+    "Now that we have our text-based features, let's create some vector embeddings. Embeddings are numerical representations of data that capture its semantic meaning. We'll also create some captions to describe in words what each image shows.\n",
     "\n",
     "### Image Embeddings\n",
     "\n",
-    "We'll use a pretrained CLIP model to generate embeddings for our product images. We'll define a UDF that takes a batch of image bytes as input, preprocesses them, and then uses the CLIP model to generate embeddings."
+    "We'll use a pretrained CLIP model to generate embeddings for our product images. We'll define a UDF that takes a batch of image bytes as input, preprocesses them, and then uses the CLIP model to generate embeddings.\n",
+    "\n",
+    "### Captions\n",
+    "\n",
+    "We'll also use a pretrained BLIP model here, that takes in an image and returns a caption of up to 30 words."
    ]
   },
   {
@@ -405,7 +422,6 @@
     "            img = Image.open(image_stream).convert(\"RGB\")\n",
     "            \n",
     "            inputs = self.processor(img, return_tensors=\"pt\").to(self.device)\n",
-    "            # Use greedy decoding (num_beams=1) and short max_length for speed in this demo\n",
     "            with torch.no_grad():\n",
     "                out = self.model.generate(**inputs, max_length=30, num_beams=3, do_sample=False)\n",
     "            \n",
@@ -461,7 +477,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "table.backfill(\"image_embedding\", checkpoint_size=CHECKPOINT_SIZE, concurrency=CONCURRENCY)"
+    "with db.local_ray_context():\n",
+    "    table.backfill(\"image_embedding\", checkpoint_size=CHECKPOINT_SIZE, concurrency=CONCURRENCY)"
    ]
   },
   {
@@ -473,7 +490,8 @@
    "outputs": [],
    "source": [
     "# This may take a few minutes if you're running on a CPU.\n",
-    "table.backfill(\"caption\", checkpoint_size=CHECKPOINT_SIZE, concurrency=CONCURRENCY)"
+    "with db.local_ray_context():\n",
+    "    table.backfill(\"caption\", checkpoint_size=CHECKPOINT_SIZE, concurrency=CONCURRENCY)"
    ]
   },
   {
@@ -484,7 +502,7 @@
    },
    "outputs": [],
    "source": [
-    "table.search().limit(2).to_pandas().iloc[0:3]"
+    "table.search().limit(5).to_pandas()"
    ]
   },
   {
@@ -542,7 +560,8 @@
     "table.add_columns({\n",
     "    \"caption_embedding\": GenTextEmbeddings(),\n",
     "})\n",
-    "table.backfill(\"caption_embedding\", checkpoint_size=CHECKPOINT_SIZE, concurrency=CONCURRENCY)"
+    "with db.local_ray_context():\n",
+    "    table.backfill(\"caption_embedding\", checkpoint_size=CHECKPOINT_SIZE, concurrency=CONCURRENCY)"
    ]
   },
   {
@@ -551,7 +570,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "table.search().limit(1).to_pandas().iloc[0:3]"
+    "table.search().limit(5).to_pandas()"
    ]
   },
   {
@@ -573,10 +592,11 @@
    "source": [
     "new_rows = list(generate_rows(df, IMG_DIR, start=DATASET_SIZE, end=int(DATASET_SIZE * 1.5)))\n",
     "table.add(new_rows)\n",
-    "table.backfill(\"color_tags\", checkpoint_size=CHECKPOINT_SIZE, concurrency=CONCURRENCY)\n",
-    "table.backfill(\"image_embedding\", checkpoint_size=CHECKPOINT_SIZE, concurrency=CONCURRENCY)\n",
-    "table.backfill(\"caption\", checkpoint_size=CHECKPOINT_SIZE, concurrency=CONCURRENCY)\n",
-    "table.backfill(\"caption_embedding\", checkpoint_size=CHECKPOINT_SIZE, concurrency=CONCURRENCY)"
+    "with db.local_ray_context():\n",
+    "    table.backfill(\"color_tags\", checkpoint_size=CHECKPOINT_SIZE, concurrency=CONCURRENCY)\n",
+    "    table.backfill(\"image_embedding\", checkpoint_size=CHECKPOINT_SIZE, concurrency=CONCURRENCY)\n",
+    "    table.backfill(\"caption\", checkpoint_size=CHECKPOINT_SIZE, concurrency=CONCURRENCY)\n",
+    "    table.backfill(\"caption_embedding\", checkpoint_size=CHECKPOINT_SIZE, concurrency=CONCURRENCY)"
    ]
   },
   {
